--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	},
 	"dependencies": {
 		"@fortawesome/free-brands-svg-icons": "^7.1.0",
+		"@fortawesome/svelte-fontawesome": "^0.2.4",
 		"@vercel/kv": "^3.0.0",
 		"nanoid": "^5.1.6",
 		"svelte-fa": "^4.0.4"
