WIP supabase integration

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
 	"dependencies": {
 		"@fortawesome/free-brands-svg-icons": "^7.1.0",
 		"@fortawesome/svelte-fontawesome": "^0.2.4",
+		"@supabase/ssr": "^0.7.0",
+		"@supabase/supabase-js": "^2.78.0",
 		"@vercel/kv": "^3.0.0",
 		"nanoid": "^5.1.6",
 		"svelte-fa": "^4.0.4"
