--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,7 @@
-# Vercel KV Environment Variables
+# Supabase Environment Variables
 # Copy this file to .env and fill in your values
-# Get these from: Vercel Dashboard → Your Project → Storage → Your KV Database → .env.local tab
+# Get these from: Supabase Dashboard → Project Settings → API
 
-KV_REST_API_URL=
-KV_REST_API_TOKEN=
-
-# Leaderboard Secret for signature verification
-# Generate a random secret key for production (e.g., use: openssl rand -hex 32)
-LEADERBOARD_SECRET=
+VITE_SUPABASE_URL=your-project-url.supabase.co
+VITE_SUPABASE_ANON_KEY=your-anon-key
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
