--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@
 # Copy this file to .env and fill in your values
 # Get these from: Supabase Dashboard → Project Settings → API
 
-VITE_SUPABASE_URL=your-project-url.supabase.co
+VITE_SUPABASE_URL=https://your-project-ref.supabase.co
 VITE_SUPABASE_ANON_KEY=your-anon-key
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+
+# Note: For Edge Functions to work, you also need to set secrets in Supabase:
+# supabase secrets set RESEND_API_KEY=re_your_api_key
+# See SUPABASE_EDGE_FUNCTIONS_SETUP.md for full setup instructions
