--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ node_modules
 .wrangler
 /.svelte-kit
 /build
+.claude
 
 # OS
 .DS_Store
@@ -23,4 +24,8 @@ vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
 AUTH_SETUP.md
-.claude
+DEPLOYMENT_CHECKLIST.md
+
+# Supabase local development
+supabase/.env.local
+.supabase
